manifests/object-detection-workshop/od-app-chart/templates/model-server.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app-object-detection
  labels:
    modelmesh-enabled: 'true'
    opendatahub.io/dashboard: 'true'
