manifests/object-detection-workshop/od-app-chart/templates/model-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-detection-rest
  namespace: app-object-detection
  labels:
    app: object-detection-rest
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: object-detection-rest
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: object-detection-rest
        deployment: object-detection-rest
    spec:
      containers:
      - env:
        - name: PREDICTION_URL
          value: http://modelmesh-serving.object-detection:8008/v2/models/model/infer
        image: quay.io/mmurakam/object-detection-rest:v0.1.0
        imagePullPolicy: IfNotPresent
        name: object-detection-rest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-detection-rest
  name: object-detection-rest
  namespace: app-object-detection
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: object-detection-rest
    deployment: object-detection-rest
  sessionAffinity: None
  type: ClusterIP
