manifests/object-detection-workshop/od-app-chart/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: object-detection-app
  name: object-detection-app
  namespace: app-object-detection
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: object-detection-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: object-detection-app
        deployment: object-detection-app
    spec:
      containers:
      - env:
        - name: OBJECT_DETECTION_URL
          value: http://object-detection-rest:8080/predictions
        image: quay.io/agroom/object-detection-app
        imagePullPolicy: Always
        name: object-detection-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: object-detection-app
  name: object-detection-app
  namespace: app-object-detection
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: object-detection-app
    deployment: object-detection-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: object-detection-app
  name: object-detection-app
  namespace: app-object-detection
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: object-detection-app
    weight: 100
  wildcardPolicy: None
